--- a/src/views/contacts/index.ejs
+++ b/src/views/contacts/index.ejs
@@ -1,4 +1,4 @@
-<%- include header.ejs %>
+<%- include ../partials/header.ejs %>
 
   <h1>Contacts</h1>
 
@@ -8,9 +8,11 @@
         <a class="contact-link" href="/contacts/<%= contact.id %>">
           <%= contact.first_name %>&nbsp;<%= contact.last_name %>
         </a>
-        <a class="delete-contact" href="/contacts/<%= contact.id %>/delete" tabindex="-1">X</a>
+        <form action="/contacts/<%= contact.id %>?_method=DELETE" method="POST">
+          <button class="delete-contact">delete contact</button>
+        </form>
       </div>
     <% }) %>
   </div>
 
-<%- include footer.ejs %>
+<%- include ../partials/footer.ejs %>
