password decription working.

--- a/src/views/auth/login.ejs
+++ b/src/views/auth/login.ejs
@@ -2,7 +2,7 @@
 
   <h1>Log in</h1>
 
-  <form method="post" action="/signup" class="new-contact-form">
+  <form method="get" action="/signup" class="new-contact-form">
     <label>
       <span>User Name:</span>
       <input type="text" name="username" />
