al authentication working

--- a/src/views/auth/login.ejs
+++ b/src/views/auth/login.ejs
@@ -17,7 +17,8 @@
       <span>Password:</span>
       <input type="password" name="password" />
     </label>
-          <input type="submit" value="Log In">
+    <input type="submit" value="Log In">
+    <a href="/signup">Sign Up</a>
   </form>
 
   <%- include ../partials/footer.ejs %>
