--- a/src/views/partials/nav.ejs
+++ b/src/views/partials/nav.ejs
@@ -4,7 +4,9 @@
     <input name="q" type="search" placeholder="search" value="<%= query %>" autofocus/>
     <input type="submit" style="display: none" />
   </form>
+  <% if (admin) { %>
   <a href="/contacts/new">New Contact</a>
+  <% } %>
   <% if (session) { %>
     <a class="right-nav" href="/logout">Log Out</a>
   <% } %>
