--- a/src/views/contacts/show.ejs
+++ b/src/views/contacts/show.ejs
@@ -1,9 +1,11 @@
 <%- include ../partials/header.ejs %>
 
   <div class="contact-show-page-controls">
+    <% if (admin) { %>
     <form action="/contacts/<%= contact.id %>?_method=DELETE" method="POST">
       <button class="delete-contact">delete contact</button>
     </form>
+    <% } %>
   </div>
 
   <h1><%= contact.first_name %>&nbsp;<%= contact.last_name %></h1>
